--- a/kaelo_employee_onboarding_test/docker-compose.yml
+++ b/kaelo_employee_onboarding_test/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_PASSWORD: "odoo"
     ports:
       - "5432:5432"
+    volumes:
+      - odoo-db-data:/var/lib/postgresql/pgdata
 
   odoo:
     image: odoo:17.0
@@ -16,10 +18,16 @@ services:
     ports:
       - "8069:8069"
     volumes:
+      - odoo-web-data:/var/lib/odoo
       - ./config:/etc/odoo
-      - ./kaelo_employee_onboarding:/mnt/extra-addons/kaelo_employee_onboarding
-      - ./sample_data:/mnt/extra-addons/sample_data
+      - ./addons:/mnt/extra-addons
+      # - ./kaelo_employee_onboarding:/mnt/extra-addons/kaelo_employee_onboarding
+      # - ./sample_data:/mnt/extra-addons/sample_data
     environment:
       HOST: "db"
       USER: "odoo"
       PASSWORD: "odoo"
+
+volumes:
+  odoo-web-data:
+  odoo-db-data:
