--- a/kaelo_employee_onboarding_test/config/odoo.conf
+++ b/kaelo_employee_onboarding_test/config/odoo.conf
@@ -1,4 +1,4 @@
 [options]
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
-admin_passwd = $pbkdf2-sha512$600000$PgfA2DunlHKudU5JSSmFcA$WinoepBs8Ovm5Jym6qBPG8SLw5s45/xMDnPni.V4LSU0jvsR/YNT78ZO6P/Z.eHzK3ZqJwbdsr8i4NEOATIfew
+admin_passwd = $pbkdf2-sha512$600000$pHROKaU0JiQEwLgXYgwhhA$qk1mrF2V7BLr4aCiW7zsQmcS.0M5TaDS3P.nP8OGOXWLHndBkdzlIn5k24RpkitKsstIzD9GWupR3NSiu5IUfg
 
