--- a/kaelo_employee_onboarding_test/docker-compose.yml
+++ b/kaelo_employee_onboarding_test/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - odoo-db-data:/var/lib/postgresql/pgdata
+      - odoo-db-data:/var/lib/postgresql/data
 
   odoo:
     image: odoo:17.0
@@ -24,9 +24,11 @@ services:
       # - ./kaelo_employee_onboarding:/mnt/extra-addons/kaelo_employee_onboarding
       # - ./sample_data:/mnt/extra-addons/sample_data
     environment:
-      HOST: "db"
-      USER: "odoo"
-      PASSWORD: "odoo"
+      DB_HOST: "db"
+      DB_USER: "odoo"
+      DB_PASSWORD: "odoo"
+      DB_NAME: "postgres" 
+
 
 volumes:
   odoo-web-data:
