Succefully import created employees, modified the module anfd the security. It is working 100%, completed.

--- a/kaelo_employee_onboarding_test/config/odoo.conf
+++ b/kaelo_employee_onboarding_test/config/odoo.conf
@@ -1,4 +1,4 @@
 [options]
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
-admin_passwd = $pbkdf2-sha512$600000$pHROKaU0JiQEwLgXYgwhhA$qk1mrF2V7BLr4aCiW7zsQmcS.0M5TaDS3P.nP8OGOXWLHndBkdzlIn5k24RpkitKsstIzD9GWupR3NSiu5IUfg
+admin_passwd = $pbkdf2-sha512$600000$K6VUqjUmZKw1ZizF2LuXkg$pA/6hRgGozwWkwZTIqyweOM7pf.dGCTcXEhfNTMclxqJT5bLOGAxgvpZfiHAcOXLsSOJ/ozteYAh82OneyUvjw
 
